# hades

./: .gitignore  DATA_GUIDE.md  Dockerfile  Makefile  README.md  WORK_LOG.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: default.yaml  eval_adversarial.yaml  eval_config_A.yaml  eval_config_B.yaml  eval_config_C.yaml  eval_config_D.yaml  eval_config_E.yaml  eval_config_F.yaml  eval_config_G.yaml  eval_config_H.yaml
configs/tool_definitions/: rag_search.yaml  siem_query.yaml
dashboard/: app.py  gpu.py  jobs.py  models.py  requirements.txt  run.sh  server.js
dashboard/static/: index.html
data/benchmark/: hades_benchmark_v1_manifest.json
data/fixtures/: beth_dns_sample.csv  beth_process_sample.csv  fox_ground_truth.json  sample_alerts.jsonl
data/manifests/: public_benchmark_of_record.yaml
docs/: ADVISOR_FEEDBACK.md  ADVISOR_PRESENTATION.md  ARCHITECTURE.md  BENCHMARK_MANIFEST.md  DATASET_ADEQUACY_STRATEGY.md  DATASET_RESEARCH.md  HADES_REFERENCE.html  PAPER_OUTLINE.md  PAPER_RESEARCH_ANALYSIS.md  PROPOSAL_REVIEW.md  RELATED_WORK.md  REVIEWER_CHANGELOG.md  SIEM_NORMALIZATION_ANALYSIS.md  SOCBENCH_ALIGNMENT.md  SPLUNK_ACQUISITION_PLAN.md  TECHNICAL_SPEC.md  TECHNICAL_SPEC_ORIGINAL.docx  architecture_diagram.jsx
docs/notebooklm/: 01_PROJECT_OVERVIEW.md  02_THREAT_MODEL.md  03_ARCHITECTURE_AND_DEFENSES.md  04_EXPERIMENTS.md  05_RELATED_WORK.md  06_TIMELINE_AND_STATUS.md  SETUP.md
docs/notion/: DASHBOARD.md  DECISIONS.md  EXPERIMENTS_DB.md  MEETING_TEMPLATE.md  MILESTONES.md  RESOURCES.md  SETUP.md
paper/: HADES_PAPER_DRAFT.md
paper/figures/: fig1_pipeline_architecture.md  fig2_attack_flow.md  fig3_experiment_matrix.md  fig4_soc_gap.md
paper/sections/: 00_abstract.md  01_introduction.md  02_background.md  03_threat_model.md  04_system_architecture.md  05_methodology.md  06_results.md  07_discussion.md  08_related_work.md  09_references.md
scripts/: assemble_paper.py  build_benchmark_pack.py  build_mitre_rag.py  generate_beth_synthetic.py  gpu-env.sh  ingest_threat_intel.py  lab_setup.sh  reproduce_all.py  run_adversarial_e2e.py  run_campaign_demo.py  run_comprehensive_validation.py  run_defense_analysis.py  run_e2e_demo.py  run_e3_extended.py  run_e3_payload_survival.py  run_experiment.py  run_full_pipeline_demo.py  run_gpu_experiments.sh  run_invariant_evaluation.py  setup.sh  validate_architecture.py
src/: __init__.py  main.py  pipeline.py
src/adversarial/: __init__.py  defenses.py  encodings.py  injector.py  payloads.py  vectors.py
src/agents/: __init__.py  base.py  (+5 more)
tests/: test_adversarial_defenses.py  test_adversarial_stress.py  test_behavioral_invariants.py  test_beth_parser.py  test_correlator.py  test_correlator_stress.py  test_cross_technique.py  test_dataset_gate.py  test_fox_e2e.py  test_full_pipeline.py  test_parser_edge_cases.py  test_parsers.py  test_pipeline_invariants.py  test_playbook.py  test_rag_smoke.py  test_schemas.py  test_socbench_adapter.py  test_statistical_tests.py
(+24 files in other folders)
